--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,11 @@ export(":=")
 export(.data)
 export(as_label)
 export(as_name)
+export(coverage_options)
 export(enquo)
 export(enquos)
 export(expr)
+export(extend)
 export(process_raw)
 export(sym)
 export(syms)
