--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,15 @@ export(":=")
 export(.data)
 export(as_label)
 export(as_name)
+export(back_adjust_iccm)
 export(coverage_options)
 export(enquo)
 export(enquos)
 export(expr)
 export(extend)
+export(interventions_rename)
 export(process_raw)
+export(replenishment_options)
 export(sym)
 export(syms)
 importFrom(magrittr,"%>%")
