--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(enquos)
 export(expr)
 export(extend)
 export(interventions_rename)
+export(link_data)
+export(post_process)
 export(process_raw)
 export(replenishment_options)
 export(sym)
