--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(as_label)
 export(as_name)
 export(back_adjust_iccm)
 export(coverage_options)
+export(create_optimisation_data)
 export(enquo)
 export(enquos)
 export(expr)
