--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,18 +7,24 @@ export(as_label)
 export(as_name)
 export(back_adjust_iccm)
 export(coverage_options)
+export(create_optim_matrices)
 export(create_optimisation_data)
+export(dominant)
 export(enquo)
 export(enquos)
 export(expr)
 export(extend)
 export(interventions_rename)
 export(link_data)
+export(multi_optimisation)
 export(post_process)
 export(process_raw)
 export(replenishment_options)
+export(single_optimisation)
 export(sym)
 export(syms)
+import(ROI.plugin.glpk)
+import(ompr)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
