--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(enquo)
 export(enquos)
 export(expr)
 export(extend)
+export(gf_aggregate)
+export(gf_select)
 export(interventions_rename)
 export(link_data)
 export(multi_optimisation)
