--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,8 @@ LazyDataCompression: xz
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
+    knitr,
+    rmarkdown,
     roxygen2,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -31,3 +33,4 @@ Depends:
     R (>= 2.10),
     ROI.plugin.glpk,
     ompr
+VignetteBuilder: knitr
