--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(link_data)
 export(multi_optimisation)
 export(post_process)
 export(process_raw)
+export(render_report)
 export(replenishment_options)
 export(single_optimisation)
 export(sym)
