Fixed coverage post-replenishment period option

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(enquo)
 export(enquos)
 export(expr)
 export(extend)
+export(fixed_post)
 export(gf_aggregate)
 export(gf_select)
 export(interventions_rename)
