Export get_Weighting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(enquos)
 export(expr)
 export(extend)
 export(fixed_post)
+export(get_weighting)
 export(gf_aggregate)
 export(gf_select)
 export(interventions_rename)
