Final formatting function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(enquo)
 export(enquos)
 export(expr)
 export(extend)
+export(final_format)
 export(fixed_post)
 export(get_weighting)
 export(gf_aggregate)
