--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(coverage_options)
 export(create_optim_matrices)
 export(create_optimisation_data)
 export(dominant)
+export(dominant2)
 export(enquo)
 export(enquos)
 export(expr)
