--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,10 @@ Imports:
     purrr,
     ROI,
     ompr.roi,
-    patchworkgit status
-    
+    patchwork
+Depends: 
+    R (>= 2.10),
+    ROI.plugin.glpk,
+    ompr
+VignetteBuilder: knitr
+
